--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,6 +1,10 @@
 rootProject.name = 'ReactNativeDrawerExample'
-include ':react-native-fbads'
-project(':react-native-fbads').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-fbads/android/app')
+include ':react-native-splash-screen'
+project(':react-native-splash-screen').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-splash-screen/android')
+include ':react-native-fbsdk'
+project(':react-native-fbsdk').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-fbsdk/android')
+include ':react-native-ads-facebook'
+project(':react-native-ads-facebook').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-ads-facebook/android/app')
 include ':react-native-vector-icons'
 project(':react-native-vector-icons').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-vector-icons/android')
 
