--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -103,6 +103,7 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
@@ -137,9 +138,13 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-fbads')
+    compile project(':react-native-splash-screen')
+    compile project(':react-native-fbsdk')
+    compile project(':react-native-ads-facebook')
     compile project(':react-native-vector-icons')
     compile fileTree(dir: "libs", include: ["*.jar"])
+     compile 'com.facebook.android:audience-network-sdk:5.+'
+    compile 'com.facebook.android:facebook-android-sdk:4.15.0'
     compile "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     compile "com.facebook.react:react-native:+"  // From node_modules
 }
